feat: Add navigation, product list, and stock summary components with styling
- Implemented Navigation component for site navigation with active link highlighting.
- Created ProductList component to display products with stock status and management options.
- Developed StockSummary component to summarize stock movements and display detailed tables.
- Defined TypeScript interfaces for product and stock movement data structures.
- Added responsive styling for all components to enhance user experience across devices.

--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
   "name": "project-db-react",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev:frontend": "next dev",
+    "dev:backend": "node server.js",
+    "dev": "concurrently -k \"npm run dev:backend\" \"npm run dev:frontend\"",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "axios": "^1.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "mssql": "^9.3.2",
+    "next": "14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "concurrently": "^8.2.2",
+    "typescript": "^5.0.0"
   }
 }
